// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedIntlProvider should return ConnectedIntlProvider 1`] = `"Connect(IntlProvider)"`;

exports[`actions should create an action to get locale 1`] = `
Array [
  Object {
    "locale": "en",
    "type": "GetLocalesSuccess",
  },
]
`;

exports[`locale reducer should handle GET_Locale_Begin 1`] = `
Object {
  "locale": "en",
}
`;

exports[`locale reducer should handle GET_Locale_Failure 1`] = `
Object {
  "error": Object {
    "success": false,
  },
  "locale": "en",
}
`;

exports[`locale reducer should handle GET_Locale_Success 1`] = `
Object {
  "locale": "fr",
}
`;
